// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardEntryPoint should render the module setup component when unified dashboard is enabled and passed the setupModuleSlug prop 1`] = `
<div>
  <div>
    ModuleSetup
    {"moduleSlug":"analytics"}
  </div>
</div>
`;

exports[`DashboardEntryPoint should render the unified dashboard when unified dashboard is enabled 1`] = `
<div>
  <div>
    DashboardMainApp
    {}
  </div>
</div>
`;
